Add reset, colors and template

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,30 @@
-<h1>Yeaaaaah</h1>
+<!DOCTYPE html>
+<html lang='eng'>
+  <head>
+    <title>ivan Calderon</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
+    <link rel="stylesheet" href="css/import.css" />
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+  <div id='main'>
+    <header>
+    </header><!-- end header-->
+    <section class='container'>
+    </section>
+    <section class='container2'>
+    </section>
+    <section class='container3'>
+    </section>
+    <section class='container4'>
+    </section>
+    <footer>
+    </footer><!-- end footer#mainFooter-->
+  </div><!-- end main-->
+
+  </body>
+</html>
