--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
 
   <div id='main'>
     <header>
+      <nav class='nav-social'>
+        <ul>
+          <li><a class='facebook' href='http://www.facebook.com/iwano.vaca' title='Facebook'></a></li>
+          <li><a class='google' href='https://plus.google.com/u/0/108840241620567447686/posts' title='g+'></a></li>
+          <li><a class='twitter' href='https://twitter.com/iwano' title='Twitter'></a></li>
+          <li><a class='skype' href='skype:iwano91?call' title='Skype'></a></li>
+          <li><a class='linkedin' href='http://www.linkedin.com/profile/view?id=181496367&locale=es_ES&trk=prof-0-ovw-view-secondary' title='Linkedin'></a></li>
+        </ul>
+      </nav>
     </header><!-- end header-->
     <section class='container'>
     </section>
